[project]
name = "xtimec"
dependencies = ["numpy>=1.2", "treelite==3.9.1", "treelite-runtime>=3.9","xgboost==1.7.6","scikit-learn==1.3.2"]

[build-system]
requires = ["maturin>=1.2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "xtimec._xtimec"
features = ["python"]
no-default-features = true
