[tool.poetry]
name = "xtime-training"
version = "0.1.0"
description = ""
authors = ["Hewlett Packard Labs"]
readme = "README.md"
packages = [{include = "xtime"}]

[tool.poetry.dependencies]
python = "~3.12"
llvmlite = ">0.42.0"        # Without this, in Windows OS poetry selects 0.34 that does not have pre-built packages.
scikit-learn = "1.5.0"      # core dependency
mlflow = "2.13.0"           # core dependency
ray = { url = "https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp312-cp312-manylinux2014_x86_64.whl",  extras = ["tune", "default"] }   # core dependency
numpy = "1.26.4"            # core dependency
pandas = "2.2.2"            # core dependency (need to fix the code to work with pandas 2.0.0)
pydantic = "2.7.4"          # indirect dependency (why here: https://github.com/aws/aws-sdk-pandas/issues/2379)
pyaml = "24.4.0"            # core dependency
requests = "2.32.3"         # core dependency
tinydb = "4.8.0"            # core dependency
prettytable = "3.10.0"      # command line interface
coloredlogs = "15.0.1"      # command line interface

# When adding/removing/changing optional dependencies:
#   1. Update README.md file (search for `Extra dependencies`).
#   2. Update `[tool.poetry.extras]` section below.
# Install these dependencies:
#   1. `poetry install --all-extras`  install all extra dependencies.
#   2. `poetry install --extras xgboost`
# If no `--all-extras` / `--extras` provided, the respective installed packages will be uninstalled.
openml = { version = "0.14.2", optional = true }   # Prerequisite dependency for OpenML datasets.
tsfresh = { version = "0.20.2", optional = true }  # Prerequisite dependency for time series data sets.
catboost = { version = "1.2.5", optional = true }  # Gradient boosting trees - CatBoost library.
lightgbm = { version = "4.3.0", optional = true }  # Gradient boosting trees - LightGBM library.
xgboost = { version = "2.0.3", optional = true }   # Gradient boosting trees - XGBoost library.


[tool.poetry.group.dev.dependencies]
pyre-check = "0.9.21"          # Type checking tool (`pyre --search-path $(python -c 'import site; print(site.getsitepackages()[0])') check`)
ruff = "0.4.9"                 # Replace black, isort, flake with `ruff check [--fix]` and `ruff format`
pytest = "8.2.2"               # Running unit tests (`pytest ./tests` instead of `python -m unittest`)
pytest-xdist = "3.6.1"         # Parallel `pytest` (`python -m pytest -n auto ./tests`)

[tool.poetry.group.eda.dependencies]
jupyter = "1.0.0"
pandasgui = "0.2.14"           # FIXME: This does not work in Jupyter notebooks on Linux headless systems.
PyQt5 = "5.15.2"               # Fixes "inable to find installation candidates for pyqt5-qt5 (x.x.x)" in Ubuntu

[tool.poetry.extras]
openml = ["openml"]
timeseries = ["tsfresh"]

catboost = ["catboost"]
lightgbm = ["lightgbm"]
xgboost = ["xgboost"]

datasets = ["openml", "tsfresh"]
models = ["catboost", "lightgbm", "xgboost"]

all = ["openml", "tsfresh", "catboost", "lightgbm", "xgboost"]


[tool.ruff]
line-length = 120
indent-width = 4
target-version = 'py39'
extend-include = ["*.ipynb"]


[tool.ruff.format]
indent-style = "space"


[tool.ruff.lint]
extend-select = ["I"]  # I - isort


[tool.pytest.ini_options]
markers = [
    "datasets: marks tests as ML datasets unit tests (deselect with '-m \"not datasets\"')",
    "estimators: marks tests as ML models unit tests (deselect with '-m \"not models\"')",
    "cli: marks tests as Command Line Interface (CLI) unit tests (deselect with '-m \"not cli\"')"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
